Refactor code for add and mulitiplication function

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
 }
 
 .display-screen {
+  display: flex;
   grid-column: 1/5;
   width: 95%;
   height: 90%;
@@ -50,6 +51,16 @@
   align-self: center;
   justify-self: center;
   background-color: #e7e5e4;
+
+  justify-content: flex-end;
+
+  overflow: hidden;
+  letter-spacing: -3px;
+  padding-right: 20px;
+}
+.display-child {
+  font-size: 3.9rem;
+  font-family: "roboto";
 }
 
 /* CLEAR DELETE BUTTON */
